bin/testsuite/tests/compiler/src/compiler3.swg
#global testerror "Err0686";
#unittest tgoito // swc-expected-error {{parser_err_invalid_compiler}}
